index.html: centered and added new request descriptions under headers

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <html>
 	<body>
+		<center>
 		<h1>ATTENTION: Check JavaScript console for details on requests!</h1>
 		<h2>Request 1</h2>
+		<p>countriesnow.space/api/v0.1/countries/population</p>
 		<button onclick="getData('https://countriesnow.space/api/v0.1/countries/population')">Request 1</button>
 		<h2>Request 2</h2>
+		<p>api.jikan.moe/v4/recommendations/anime</p>
 		<button onclick="getData('https://api.jikan.moe/v4/recommendations/anime')">Request 2</button>
 		<h2>Request 3</h2>
+		<p>api.jikan.moe/v4/random/anime</p>
 		<button onclick="getData('https://api.jikan.moe/v4/random/anime')">Request 3</button>
 		<h2>Request 4</h2>
+		<p>api.jikan.moe/v4/random/manga</p>
 		<button onclick="getData('https://api.jikan.moe/v4/random/manga')">Request 4</button>
+		</center>
 		<script>
 			async function getData(url) {
 				try {
